# SteamTime

./: .gitignore  Cargo.toml  README.md  config.yaml.example  owned_games.csv  recently_played_games.csv
src/: main.rs
src/api/: mod.rs  steamToken.rs
